# ou_module_bot

./: .env  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
infrastructure/: Dockerfile  docker-entrypoint.sh  ofelia.ini
src/ou_bot/: ou_module.py
src/ou_bot/common/: config.py  database.py  ou_module.py
src/ou_bot/module_scraper/: __main__.py  app.py  config.py  data_parser.py  database.py  scraper.py
src/ou_bot/reddit_bot/: __main__.py  app.py  comment_bot.py  config.py  mako.py  post_scanner.py  praw_handler.py  submission_bot.py  template_engine.py
src/ou_bot/reddit_bot/templates/: greeting.mako  module_general_table.mako  modules_from_comment.mako  modules_short_summary.mako
tests/: test_database.py
