[tool.poetry]
name = "ou-bot"
version = "0.2.0"
description = ""
authors = ["Jon Charter"]
readme = "README.md"
packages = [{ include = "ou_bot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.3.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^1.10.8"
requests = "^2.31.0"
praw = "^7.7.0"
mako = "^1.2.4"
cachetools = "^5.3.1"
structlog = "^25.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
