[project]
name = "ou-bot"
version = "1.0.0"
description = ""
authors = [{ name = "Jon Charter" }]
requires-python = "~=3.12"
dependencies = [
    "black>=23.3.0,<24",
    "pydantic>=1.10.8,<2",
    "requests>=2.31.0,<3",
    "praw>=7.7.0,<8",
    "mako>=1.2.4,<2",
    "cachetools>=5.3.1,<6",
    "structlog>=25.1.0,<26",
]

[project.scripts]
submission_bot = "ou_bot.reddit_bot.submission_bot:run"
comment_bot = "ou_bot.reddit_bot.comment_bot:run"
module_scraper = "ou_bot.module_scraper.app:run"

[dependency-groups]
dev = ["black>=23.3.0,<24"]

[tool.hatch.build.targets.sdist]
include = ["src/ou_bot"]

[tool.hatch.build.targets.wheel]
include = ["src/ou_bot"]

[tool.hatch.build.targets.wheel.sources]
"src/ou_bot" = "ou_bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
